Create Section 3 Notes

--- a/Slides/Section2_4143.html
+++ b/Slides/Section2_4143.html
@@ -11,7 +11,7 @@
   <style type="text/css">code{white-space: pre;}</style>
   <link rel="stylesheet" type="text/css" media="screen, projection, print"
     href="slidy.css" />
-  <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+  <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
   <script src="http://www.w3.org/Talks/Tools/Slidy2/scripts/slidy.js"
     charset="utf-8" type="text/javascript"></script>
 </head>
@@ -424,7 +424,7 @@ Brandon LeBeau
 <li>Percentiles:
 <ul class="incremental">
 <li>The point on the score scale below which a specified percentage of scores fall.</li>
-<li>Denoted by $P_{%}%</li>
+<li>Denoted by <span class="math">\(P_{\%}\)</span></li>
 </ul></li>
 <li>A percentile is the inverse of a percentile rank.</li>
 <li>The percentile rank of a given point on the score scale is the percentage of scores falling below this point in the ordered series of scores.
@@ -459,10 +459,10 @@ Brandon LeBeau
 <p class="caption">plot of chunk ogivepercent2</p>
 </div>
 <ul class="incremental">
-<li>$P_{R}(122) = $</li>
-<li>$P_{R}(160) = $</li>
-<li>$P_{50} = $</li>
-<li>$P_{80} = $</li>
+<li>\(P_{R}(122) = \)</li>
+<li>\(P_{R}(160) = \)</li>
+<li>\(P_{50} = \)</li>
+<li>\(P_{80} = \)</li>
 </ul>
 </div>
 <div id="decile-differences" class="slide section level1">
@@ -498,11 +498,12 @@ Brandon LeBeau
 <ul class="incremental">
 <li>Percentiles:
 <ul class="incremental">
-<li>$ P_{%} = X_{ll} + i () $</li>
+<li>\( P_{\%} = X_{ll} + i () \)</li>
 </ul></li>
 <li>Percentile Ranks
 <ul class="incremental">
-<li>$ P_{R}(X) = (f_{b} + )$ where:</li>
+<li>\( P_{R}(X) = (f_{b} + )\) </li> 
+where:
 <li>X = Score of Interest</li>
 <li>n = Total Sample size</li>
 <li><span class="math">\(\sum f_{b}\)</span> = Number of scores below interval containing X</li>
