Fix lists in Section 1 slides

--- a/Slides/Section1_4143.html
+++ b/Slides/Section1_4143.html
@@ -152,15 +152,19 @@ Brandon LeBeau
 <li>carries all information from nominal measurement</li>
 <li>represent mutually exclusive categories that are ordered</li>
 </ul></li>
-<li>Interval Measurement:</li>
+<li>Interval Measurement:
+<ul class="incremental">
 <li>carries all information from nominal and ordinal measurement</li>
 <li>represent equal distance between equivalent gaps</li>
 <li>0 is not meaningful</li>
 <li>can now perform linear transformations meaningfully</li>
-<li>Ratio Measurement:</li>
+</ul></li>
+<li>Ratio Measurement:
+<ul class="incremental">
 <li>carries all information from nominal, ordinal, and interval measurement</li>
 <li>but now 0 measn the absence of the phenomenon</li>
 <li>can only be transformed by multiplying</li>
+</ul></li>
 </ul>
 </div>
 <div id="measurement-in-the-social-sciences" class="slide section level1">
@@ -189,13 +193,14 @@ Brandon LeBeau
 <ul class="incremental">
 <li>This is abstract or a theoretical definition</li>
 </ul></li>
-<li>Develop an <em>operational</em> definition</li>
-</ol>
+<li>Develop an <em>operational</em> definition
 <ul class="incremental">
 <li>More concrete</li>
 <li>Based on the conceptual definition</li>
 <li>Commonly defines rules to allow for the measurement of the phenomenon.</li>
-</ul>
+</ul></li>
+</ol>
+
 </div>
 <div id="two-step-measurement-process-example" class="slide section level1">
 <h1>Two Step Measurement Process Example</h1>
