--- a/Slides/Section2_4143.html
+++ b/Slides/Section2_4143.html
@@ -34,38 +34,24 @@ Brandon LeBeau
 </div>
 <div id="motivating-example" class="slide section level1">
 <h1>Motivating Example</h1>
-<pre><code>##                                       title length
-## 1                            13 Going On 30     98
-## 2                            50 First Dates     99
-## 3     Anchorman: The Legend of Ron Burgundy    104
-## 4                              Aviator, The    170
-## 5                     Butterfly Effect, The    120
-## 6                       Cinderella Story, A     95
-## 7                                Collateral    120
-## 8                                     Crash    113
-## 9                          Dawn of the Dead    109
-## 10         Dodgeball: A True Underdog Story     92
-## 11    Eternal Sunshine of the Spotless Mind    108
-## 12                      Girl Next Door, The    110
-## 13 Harry Potter and the Prisoner of Azkaban    141
-## 14                                  Hellboy    132
-## 15                         Incredibles, The    121
-##                        title length
-## 1          Kill Bill: Vol. 2    136
-## 2                King Arthur    140
-## 3                 Mean Girls     97
-## 4        Million Dollar Baby    132
-## 5          Napoleon Dynamite     86
-## 6              Notebook, The    123
-## 7  Phantom of the Opera, The    143
-## 8              Punisher, The    124
-## 9                        Saw    100
-## 10         Shaun of the Dead     99
-## 11              Spider-Man 2    127
-## 12                      Troy    162
-## 13               Van Helsing    132
-## 14              Village, The    108
-## 15              White Chicks    109</code></pre>
+<pre><code>
+##                                       title length                        title length
+## 1                            13 Going On 30     98 1          Kill Bill: Vol. 2    136
+## 2                            50 First Dates     99 2                King Arthur    140
+## 3     Anchorman: The Legend of Ron Burgundy    104 3                 Mean Girls     97
+## 4                              Aviator, The    170 4        Million Dollar Baby    132
+## 5                     Butterfly Effect, The    120 5          Napoleon Dynamite     86
+## 6                       Cinderella Story, A     95 6              Notebook, The    123
+## 7                                Collateral    120 7  Phantom of the Opera, The    143
+## 8                                     Crash    113 8              Punisher, The    124
+## 9                          Dawn of the Dead    109 9                        Saw    100
+## 10         Dodgeball: A True Underdog Story     92 10         Shaun of the Dead     99
+## 11    Eternal Sunshine of the Spotless Mind    108 11              Spider-Man 2    127
+## 12                      Girl Next Door, The    110 12                      Troy    162
+## 13 Harry Potter and the Prisoner of Azkaban    141 13               Van Helsing    132
+## 14                                  Hellboy    132 14              Village, The    108
+## 15                         Incredibles, The    121 15              White Chicks    109
+</code></pre>
 </div>
 <div id="ungrouped-frequency-table" class="slide section level1">
 <h1>Ungrouped Frequency Table</h1>
@@ -109,7 +95,6 @@ Brandon LeBeau
 <li>Strengths:
 <ul class="incremental">
 <li>Can quickly see where most values fall</li>
-<li></li>
 </ul></li>
 <li>Weaknesses:
 <ul class="incremental">
@@ -120,27 +105,28 @@ Brandon LeBeau
 </div>
 <div id="effect-of-class-interval-size" class="slide section level1">
 <h1>Effect of Class Interval Size</h1>
-<pre><code>##         Var1 Freq
-## 1      [0,5)   34
-## 2     [5,10)   98
-## 3    [10,15)  111
-## 4    [15,20)   84
-## 5    [20,25)   57
-## 6    [25,30)   47
-## 7    [30,35)   23
-## 8    [35,40)    9
-## 9    [40,45)   15
-## 10   [45,50)    7
-## 11   [50,55)    4
-## 12   [55,60)   12
-## 13   [60,65)   16
-## 14   [65,70)    8
-## 15   [70,75)   35
-## 16   [75,80)   44
-## 17   [80,85)  116
-## 18   [85,90)  184
-## 19   [90,95)  280
-## 20  [95,100)  215
+<pre><code>
+##         Var1 Freq         Var1 Freq         Var1 Freq        Var1 Freq
+## 1      [0,5)   34 1     [0,10)  132 1     [0,20)  327 1    [0,50)  485
+## 2     [5,10)   98 2    [10,20)  195 2    [20,40)  136 2  [50,100)  914
+## 3    [10,15)  111 3    [20,30)  104 3    [40,60)   38 3 [100,150)  502
+## 4    [15,20)   84 4    [30,40)   32 4    [60,80)  103 4 [150,200)   35
+## 5    [20,25)   57 5    [40,50)   22 5   [80,100)  795
+## 6    [25,30)   47 6    [50,60)   16 6  [100,120)  361
+## 7    [30,35)   23 7    [60,70)   24 7  [120,140)  119
+## 8    [35,40)    9 8    [70,80)   79 8  [140,160)   34
+## 9    [40,45)   15 9    [80,90)  300 9  [160,180)   17
+## 10   [45,50)    7 10  [90,100)  495 10 [180,200)    6
+## 11   [50,55)    4 11 [100,110)  250
+## 12   [55,60)   12 12 [110,120)  111
+## 13   [60,65)   16 13 [120,130)   89
+## 14   [65,70)    8 14 [130,140)   30
+## 15   [70,75)   35 15 [140,150)   22
+## 16   [75,80)   44 16 [150,160)   12
+## 17   [80,85)  116 17 [160,170)    7
+## 18   [85,90)  184 18 [170,180)   10
+## 19   [90,95)  280 19 [180,190)    4
+## 20  [95,100)  215 20 [190,200)    2
 ## 21 [100,105)  146
 ## 22 [105,110)  104
 ## 23 [110,115)   62
@@ -160,44 +146,8 @@ Brandon LeBeau
 ## 37 [180,185)    2
 ## 38 [185,190)    2
 ## 39 [190,195)    2
-## 40 [195,200)    0</code></pre>
-<pre><code>##         Var1 Freq
-## 1     [0,10)  132
-## 2    [10,20)  195
-## 3    [20,30)  104
-## 4    [30,40)   32
-## 5    [40,50)   22
-## 6    [50,60)   16
-## 7    [60,70)   24
-## 8    [70,80)   79
-## 9    [80,90)  300
-## 10  [90,100)  495
-## 11 [100,110)  250
-## 12 [110,120)  111
-## 13 [120,130)   89
-## 14 [130,140)   30
-## 15 [140,150)   22
-## 16 [150,160)   12
-## 17 [160,170)    7
-## 18 [170,180)   10
-## 19 [180,190)    4
-## 20 [190,200)    2</code></pre>
-<pre><code>##         Var1 Freq
-## 1     [0,20)  327
-## 2    [20,40)  136
-## 3    [40,60)   38
-## 4    [60,80)  103
-## 5   [80,100)  795
-## 6  [100,120)  361
-## 7  [120,140)  119
-## 8  [140,160)   34
-## 9  [160,180)   17
-## 10 [180,200)    6</code></pre>
-<pre><code>##        Var1 Freq
-## 1    [0,50)  485
-## 2  [50,100)  914
-## 3 [100,150)  502
-## 4 [150,200)   35</code></pre>
+## 40 [195,200)    0
+</code></pre>
 </div>
 <div id="additional-notes-for-grouped-frequency-tables" class="slide section level1">
 <h1>Additional Notes for Grouped Frequency Tables</h1>
