Fix typo in Section 2

--- a/Slides/Section2_4143.html
+++ b/Slides/Section2_4143.html
@@ -453,7 +453,7 @@ Brandon LeBeau
 </ul></li>
 <li>Percentile Ranks
 <ul class="incremental">
-<li><span class="math">\[ P_{R}(X) = \left(\sum f_{b} + \frac{f_{i}(P_{\%} - X_{ll})}{i}\right)\] </span></li> 
+<li><span class="math">\[ P_{R}(X) = \frac{100}{n} \left(\sum f_{b} + \frac{f_{i}(P_{\%} - X_{ll})}{i}\right)\] </span></li> 
 where:
 <li>X = Score of Interest</li>
 <li>n = Total Sample size</li>
