Update Section 8 Slides

--- a/Slides/Section6_4143.html
+++ b/Slides/Section6_4143.html
@@ -141,7 +141,7 @@ Brandon LeBeau
 <h1>More Definitions</h1>
 <ul class="incremental">
 <li>A <strong>sample space (S)</strong> is a set of all possible outcomes of an experiment (generating event)</li>
-<li>Each individual outcome in a sample space is called a **sample point* <span class="math">\((s_{j})\)</span></li>
+<li>Each individual outcome in a sample space is called a <strong>sample point</strong> <span class="math">\((s_{j})\)</span></li>
 <li>Given a sample space, S, consisting of n sample points, <span class="math">\(s_{j}\)</span>
 <ul class="incremental">
 <li>Let <span class="math">\(Pr(s_{j}) \geq 0\)</span> be paired with each sample point</li>
@@ -239,7 +239,7 @@ Brandon LeBeau
 <ul class="incremental">
 <li>The probability of occurrence of any one of several particular events is the sum of their individual probabilities, provided the events are mutually exclusive (that is, the occurrence of one precludes others)</li>
 <li>To find the chance that at least one of two things will happen, check to see if they are mutually exclusive; if they are, add their probabilities</li>
-<li><span class="math">\(Pr(A or B) = Pr(A) + Pr(B)\)</span>, provided A and B are mutually exclusive</li>
+<li><span class="math">\(Pr(A \mbox{ or } B) = Pr(A) + Pr(B)\)</span>, provided A and B are mutually exclusive</li>
 </ul>
 </div>
 <div id="coin-twice" class="slide section level1">
@@ -255,12 +255,12 @@ Brandon LeBeau
 <li>Given two events, A and B, the probability of obtaining both A and B jointly (or successively) is the product of their separate probabilities
 <ul class="incremental">
 <li>if A and B are independent (that is, the outcome of one event has no influence on, and is in no way related to, the outcome of the other)</li>
-<li>then <span class="math">\(Pr(A and B) = Pr(A) * Pr(B)\)</span></li>
+<li>then <span class="math">\(Pr(A \mbox{ and } B) = Pr(A) * Pr(B)\)</span></li>
 </ul></li>
 <li>if A and B are not independent
 <ul class="incremental">
-<li>then <span class="math">\(Pr(A and B) = Pr(A) × Pr(B|A)\)</span></li>
-<li>or <span class="math">\(Pr(A and B)= Pr(B) * Pr(A|B)\)</span></li>
+<li>then <span class="math">\(Pr(A \mbox{ and } B) = Pr(A) × Pr(B|A)\)</span></li>
+<li>or <span class="math">\(Pr(A \mbox{ and } B)= Pr(B) * Pr(A|B)\)</span></li>
 </ul></li>
 </ul>
 </div>
@@ -285,7 +285,7 @@ Brandon LeBeau
 <li>Pr(A) must remain constant over n repetitions of the selection process.</li>
 <li>The outcome of interest is a random variable</li>
 </ol></li>
-<li>Binomial Exansion
+<li>Binomial Expansion
 <ul class="incremental">
 <li>Given a binomial experiment, the probability value associated with each possible outcome can be found using the binomial expansion <span class="math">\[ (P + Q)^N\]</span></li>
 <li>P is the probability of the outcome (event) of interst</li>
