--- a/Slides/Section9_4143.html
+++ b/Slides/Section9_4143.html
@@ -168,14 +168,14 @@ Brandon LeBeau
 <div id="confidence-interval-for-t-distribution" class="slide section level1">
 <h1>Confidence Interval for t-distribution</h1>
 <ul class="incremental">
-<li>To calculate a confidence interval for the population mean when the population standard deviation is unknown:<br />C% CI of <span class="math">\(\mu\)</span>: <span class="math">\(\bar{X} \pm t_{crit} * \frac{s}{\sqrt{n}}\)</span><br /></li>
-<li>Where <span class="math">\(\pm t\)</span> are the t-scores such that the proportion (or area) of the curve within the t-scores is equal to the confidence level.</li>
+<li>To calculate a confidence interval for the population mean when the population standard deviation is unknown:<br />C% CI of <span class="math">\(\mu\)</span>: <span class="math">\(\bar{X} \pm t_{crit} * \frac{s}{\sqrt{n - 1}}\)</span><br /></li>
+<li>Where <span class="math">\(\pm t_{crit}\)</span> are the t-scores such that the proportion (or area) of the curve within the t-scores is equal to the confidence level.</li>
 </ul>
 </div>
 <div id="example-1" class="slide section level1">
 <h1>Example</h1>
 <ul class="incremental">
-<li>A team statistician for the University of Arkansas wants to estimate the average number of points the team will score during the season. A random sample of 18 games was selected from the past two seasons; the average number of points scored was 27.4, and the standard deviation was 4.7.
+<li>A team statistician for the University of Iowa wants to estimate the average number of points the team will score during the season. A random sample of 18 games was selected from the past two seasons; the average number of points scored was 27.4, and the standard deviation was 4.7.
 <ul class="incremental">
 <li>What is the best point estimate of the population mean?<br /></li>
 <li>What is the standard error?</li>
